Adding final content adjustments

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218</strong> - graduado pela Universidade Federal do Ceará (UFC). Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: combate e prevenção ao suicídio, combate a diferentes formas de violências estruturais, desenvolvimento de relações interpessoais, promoção de saúde mental entre jovens das periferias de Fortaleza (CE), entre outros. </p>
                         <p>No entanto, minhas áreas de estudo favoritas são sobre gênero e sexualidade, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
                         <p>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente, o que vem da Abordagem Centrada na Pessoa que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
-                        <p><strong>Para saber mais sobre minha formação acesse: </strong><a href="" target="_blank"><strong>Minha Formação Acadêmica e especializações</strong></a>.</p>
-                    </div>        
+                        <p>Para saber mais sobre minha formação, acesse: <a href="https://docs.google.com/spreadsheets/d/1qbw23xeC8bhqcPI_Rl_Arh-t_04SL4qDOeh61oezXhE/edit?usp=sharing" target="_blank"><strong>Minha Formação Acadêmica e especializações</strong></a>.</p>
+                    </div>
                 </div>
             </div>
             
@@ -99,17 +99,6 @@
                     <p class="review">Por ser trans e autista sempre me preocupo se profissionais de saúde e áreas relacionadas vão me atender minimamente bem e com o Matheus desde o início a experiência tem sido muito boa. Para além de me respeitar, ele também faz um atendimento qualificado, e isso faz toda diferença! Passa bastante confiança também.</p>
                 </div>
 
-                <div class="card">
-                    <span class="material-symbols-outlined">person</span>
-                    <h3 class="nome">Pessoa Fulana</h3>
-                    <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
-                </div>
-                
-                <div class="card">
-                    <span class="material-symbols-outlined">person</span>
-                    <h3 class="nome">Pessoa Fulana</h3>
-                    <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
-                </div>
             </div>
         </section>
 
@@ -117,18 +106,43 @@
             <h2>perguntas frequentes</h2>
             <div class="perguntas-container">
                 <details class="pergunta">
-                    <summary class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</summary>
-                    <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
+                    <summary class="texto-pergunta">A terapia online é tão eficaz quanto a presencial?</summary>
+                    <p class="texto-resposta">Ainda que tragam suas diferenças, estudos recentes já comprovam que não existe nenhum prejuízo à qualidade dos atendimentos caso sejam efetuados na modalidade virtual. Na verdade, a opção online traz maior comodidade ao cliente que não precisará se locomover até um local externo de atendimento. Se faz necessário, no entanto, que a pessoa disponha de um ambiente reservado, com acesso à internet, e a um dispositivo por meio do qual possa entrar numa chamada virtual.</p>
                 </details>
 
                 <details class="pergunta">
-                    <summary class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</summary>
-                    <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
+                    <summary class="texto-pergunta">Existe idade para poder se consultar?</summary>
+                    <p class="texto-resposta">Não, a terapia pode se direcionar a todas as idades. No caso dos atendimentos comigo, no entanto, me restrinjo a atender adultos e adolescentes. A diferença entre estes dois públicos, no momento de iniciarmos um acompanhamento, será apenas contratual, uma vez que será necessária a assinatura de um responsável no contrato com uma pessoa menor de idade.</p>
                 </details>
 
                 <details class="pergunta">
-                    <summary class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</summary>
-                    <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
+                    <summary class="texto-pergunta">Posso escolher as datas dos encontros?</summary>
+                    <p class="texto-resposta">Dependendo da disponibilidade do psicólogo e do cliente, seja no turno da manhã, da tarde ou da noite, será definido um dia da semana e um horário fixos para os encontros semanais. Caso surja a necessidade de ajustar o acordo, isso pode ser conversado com o psicólogo com antecedência, para evitar prejuízos ao acompanhamento terapêutico.</p>
+                </details>
+
+                <details class="pergunta">
+                    <summary class="texto-pergunta">Caso eu tenha um imprevisto tenho como remarcar a sessão?</summary>
+                    <p class="texto-resposta">As faltas que forem comunicadas com, no mínimo, 12 horas de antecedência da sessão agendada não serão cobradas e poderão ser repostas de acordo com a disponibilidade de horário e de modalidade de ambos, psicólogo e cliente. No entanto, as faltas não comunicadas ou comunicadas com menos de 12 horas de antecedência deverão ser pagas normalmente. Outros detalhes poderão ser conferidos no contrato estabelecido no início do acompanhamento.</p>
+                </details>
+
+                <details class="pergunta">
+                    <summary class="texto-pergunta">É necessário realizar alguma preparação antes de participar de uma sessão de terapia online?</summary>
+                    <p class="texto-resposta">É recomendável que o cliente teste, previamente, o funcionamento do dispositivo que utilizará para o atendimento, assim como a qualidade de vídeo e áudio do seu computador ou celular. Caso seja de interesse do cliente, também, ele pode fazer anotações de reflexões ocorridas ao longo da semana, para ajudá-lo a se lembrar do que gostaria de tratar no momento oportuno da sessão.</p>
+                </details>
+
+                <details class="pergunta">
+                    <summary class="texto-pergunta">Qual a duração da sessão?</summary>
+                    <p class="texto-resposta"> As sessões têm duração de 50 minutos cada. Pode acontecer do assunto de uma sessão se encerrar antes de completar esse tempo, sem prejuízo para a qualidade do atendimento. Assim como, algumas vezes, pode ser necessário extrapolar esse tempo em alguns minutos para fechar algum assunto, ou acolher algum momento de sofrimento. De qualquer forma, isso será comunicado pelo psicólogo e conversado com o cliente no momento da sessão.</p>
+                </details>
+
+                <details class="pergunta">
+                    <summary class="texto-pergunta">Como é a confidencialidade e privacidade das sessões de terapia online?</summary>
+                    <p class="texto-resposta">Assim como o psicólogo estará em um ambiente resguardado e confortável o suficiente para que fale abertamente suas percepções, é muito importante que o cliente procure fazer o mesmo. Além disso, o psicólogo utilizará, obrigatoriamente, equipamentos como fones de ouvido e microfone, tanto para melhor qualidade do atendimento, quanto para garantir a privacidade do que é dito pelo cliente.</p>
+                </details>
+
+                <details class="pergunta">
+                    <summary class="texto-pergunta">De que maneiras posso efetuar o pagamento da sessão?</summary>
+                    <p class="texto-resposta">O pagamento pode ser realizado via PIX, transferência bancária ou depósito.</p>
                 </details>
 
             </div>
@@ -163,8 +177,8 @@
 
                 <div class="form-email">
                     <h3>Me envie um E-mail!</h3>
-                    <form action="https://formsubmit.co/yohans.dev@gmail.com" method="POST" id="formulario-mensagem">
-                        <input type="hidden" name="_subject" value="Nova mensagem de possível cliente!">
+                    <form action="https://formsubmit.co/matheuslb.psi@gmail.com" method="POST" id="formulario-mensagem">
+                        <input type="hidden" name="_subject" value="Nova mensagem de visitante do site!">
                         <input type="hidden" name="_captcha" value="false">
                         <label for="nome">Nome</label>
                         <br>
