--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
                     <div class="sobre-text"> 
                         <h2>sobre mim</h2>
-                        <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218</strong> - graduado pela Universidade Federal do Ceará (UFC). Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: combate e prevenção ao suicídio, combate a diferentes formas de violências estruturais, desenvolvimento de relações interpessoais, promoção de saúde mental entre jovens das periferias de Fortaleza (CE), entre outros. </p>
-                        <p>No entanto, minhas áreas de estudo favoritas são sobre gênero e sexualidade, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
+                        <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 26 anos e sou psicólogo graduado pela Universidade Federal do Ceará (UFC) - <strong>CRP 11/19218</strong>. Iniciei minha carreira na clínica em 2022 e, atualmente faço <strong>Pós-Graduação em "Gênero e Sexualidade em Contextos Clínicos e Educativos"</strong>.</p>
+                        <p>Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: combate e prevenção ao suicídio, combate a diferentes formas de violências estruturais, desenvolvimento de relações interpessoais, promoção de saúde mental entre jovens das periferias de Fortaleza (CE), entre outros. Minhas áreas de estudo favoritas são sobre gênero e sexualidade, além da perspectiva de uma psicologia crítica e engajada com pautas sociais.</p>
                         <p>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente, o que vem da Abordagem Centrada na Pessoa que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
                         <p>Para saber mais sobre minha formação, acesse: <a href="https://docs.google.com/spreadsheets/d/1qbw23xeC8bhqcPI_Rl_Arh-t_04SL4qDOeh61oezXhE/edit?usp=sharing" target="_blank"><strong>Minha Formação Acadêmica e especializações</strong></a>.</p>
                     </div>
@@ -54,7 +54,7 @@
             <div class="cf-text">
                 <h2>como funciona</h2>
                 <p>Para as sessões, vamos precisar nos comunicar por áudio e vídeo, então é essencial que você esteja em um ambiente de casa resguardado, onde se sinta confortável para falar livremente. Ao longo delas, vamos construir uma relação baseada na aceitação um com o outro, no sentido de estabelecermos um espaço no qual você se sinta, cada vez mais, confortável e confiante para abordar suas mais variadas questões. O foco é em você, na forma como lida com determinados problemas, na forma como eles impactam na sua vivência, importante e única.</p>
-                <p>Os atendimentos têm duração de 50 minutos cada. Cada sessão tem um valor de R$ 100,00, se pagas de forma avulsa. Também existe a opção de pacote mensal com 4 sessões que dá direito a 10% de desconto (R$ 360,00). O pagamento é feito no inicio do mês e já garante nossos 4 encontros daquele período.</p>
+                <p>Os atendimentos têm duração de 50 minutos cada. Cada sessão tem um valor de R$ 110,00, se pagas de forma avulsa. Também existe a opção de pacote mensal com 4 sessões que dá direito a 10% de desconto (R$ 396,00). O pagamento é feito no inicio do mês e já garante nossos 4 encontros daquele período.</p>
             </div>
             <div class="cf-ilustracao">
                 <img src="/imgs/chatting.png" alt="Uma tela de uma telefone onde, dentro dela, duas pessoas conversam.">
@@ -91,19 +91,25 @@
                 <div class="card">
                     <span class="material-symbols-outlined">person</span>
                     <h3 class="nome">Iniciais do paciente: M. M. A.</h3>
-                    <p class="review">Sempre tive receio de procurar tratamento psicológico por ouvir péssimas experiências de outras pessoas. Mas recentemente tive uma crise e senti a necessidade de procurar ajuda especializada. Foi então que encontrei o Matheus, muito atencioso e com horários flexíveis que se encaixaram na minha rotina. Hoje em dia, percebo que um bom profissional faz toda a diferença. Recomendo o trabalho do Matheus.</p>
+                    <p class="review">"Sempre tive receio de procurar tratamento psicológico por ouvir péssimas experiências de outras pessoas. Mas recentemente tive uma crise e senti a necessidade de procurar ajuda especializada. Foi então que encontrei o Matheus, muito atencioso e com horários flexíveis que se encaixaram na minha rotina. Hoje em dia, percebo que um bom profissional faz toda a diferença. Recomendo o trabalho do Matheus."</p>
                 </div>
 
                 <div class="card">
                     <span class="material-symbols-outlined">person</span>
-                    <h3 class="nome">Iniciais do paciente: V. R. R.</h3>
-                    <p class="review">Psicólogo muito atencioso. Ótima primeira consulta.</p>
+                    <h3 class="nome">Iniciais do paciente: T. B.</h3>
+                    <p class="review">"Desde nossa primeira sessão me senti muito a vontade com o Matheus. Foi minha primeira experiência com terapia em muito tempo e estava muito inseguro em como encontrar algum terapeuta com o qual me sentisse bem, e não poderia ter sido melhor."</p>
+                </div>
+
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Iniciais do paciente: F. S.</h3>
+                    <p class="review">"Eu nunca havia feito terapia, mas devido a umas crises que desencadearam problemas físicos de saúde iniciei o tratamento a pouco tempo atrás. Hoje, com pouco tempo de terapia já sinto muitas mudanças e muita melhora, graças ao ótimo profissional que é o Matheus. Muito atencioso, empático, e faz você se sentir acolhido durante toda a consulta, criando um ambiente totalmente confortável e seguro."</p>
                 </div>
 
                 <div class="card">
                     <span class="material-symbols-outlined">person</span>
                     <h3 class="nome">Iniciais do paciente: C. A. R.</h3>
-                    <p class="review">Por ser trans e autista sempre me preocupo se profissionais de saúde e áreas relacionadas vão me atender minimamente bem e com o Matheus desde o início a experiência tem sido muito boa. Para além de me respeitar, ele também faz um atendimento qualificado, e isso faz toda diferença! Passa bastante confiança também.</p>
+                    <p class="review">"Estou fazendo terapia com o Matheus há uns 8 meses mais ou menos. Tem sido muito bom! Gosto do jeito que ele conduz as sessões, conecta coisas que conversamos antes com o que estamos conversando agora e dá pra ver mais ou menos o caminho que estamos fazendo no processo terapêutico. Sempre me preocupo se profissionais de saúde e áreas relacionadas vão me atender minimamente bem, por ser trans e autista, e com o Matheus desde o início a experiência tem sido muito boa. Para além de me respeitar, ele também faz um atendimento qualificado, e isso faz toda diferença! Outro diferencial é que ele entende de questões sociais bastante complexas e que fazem parte do cotidiano, como tensões e relações de gênero, raça e sexualidade, e isso ajuda muito quando conversamos sobre questões relacionadas. Passa bastante confiança também."</p>
                 </div>
 
             </div>
