added new feedbacks and changed pricing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="cf-text">
                 <h2>como funciona</h2>
                 <p>Para as sessões, vamos precisar nos comunicar por áudio e vídeo, então é essencial que você esteja em um ambiente de casa resguardado, onde se sinta confortável para falar livremente. Ao longo delas, vamos construir uma relação baseada na aceitação um com o outro, no sentido de estabelecermos um espaço no qual você se sinta, cada vez mais, confortável e confiante para abordar suas mais variadas questões. O foco é em você, na forma como lida com determinados problemas, na forma como eles impactam na sua vivência, importante e única.</p>
-                <p>Os atendimentos têm duração de 50 minutos cada. Cada sessão tem um valor de R$ 110,00, se pagas de forma avulsa. Também existe a opção de pacote mensal com 4 sessões que dá direito a 10% de desconto (R$ 396,00). O pagamento é feito no inicio do mês e já garante nossos 4 encontros daquele período.</p>
+                <p>Os atendimentos têm duração de 50 minutos cada. Cada sessão tem um valor de R$ 130,00, se pagas de forma avulsa. Também existe a opção de pacote mensal com 4 sessões que dá direito a 10% de desconto (R$ 470,00). O pagamento é feito no inicio do mês e já garante nossos 4 encontros daquele período.</p>
             </div>
             <div class="cf-ilustracao">
                 <img src="/imgs/chatting.png" alt="Uma tela de uma telefone onde, dentro dela, duas pessoas conversam.">
@@ -110,6 +110,24 @@
                     <span class="material-symbols-outlined">person</span>
                     <h3 class="nome">Iniciais do paciente: C. A. R.</h3>
                     <p class="review">"Estou fazendo terapia com o Matheus há uns 8 meses mais ou menos. Tem sido muito bom! Gosto do jeito que ele conduz as sessões, conecta coisas que conversamos antes com o que estamos conversando agora e dá pra ver mais ou menos o caminho que estamos fazendo no processo terapêutico. Sempre me preocupo se profissionais de saúde e áreas relacionadas vão me atender minimamente bem, por ser trans e autista, e com o Matheus desde o início a experiência tem sido muito boa. Para além de me respeitar, ele também faz um atendimento qualificado, e isso faz toda diferença! Outro diferencial é que ele entende de questões sociais bastante complexas e que fazem parte do cotidiano, como tensões e relações de gênero, raça e sexualidade, e isso ajuda muito quando conversamos sobre questões relacionadas. Passa bastante confiança também."</p>
+                </div>
+
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Iniciais do paciente: J. A. C.</h3>
+                    <p class="review">"Já tinha feito terapia com outras pessoas mas nunca me tinha sentido tão bem compreendido e apoiado como com o Matheus. A sua grande empatia e conhecimento de técnicas psicoterapêuticas juntam-se à sua capacidade de compreensão de fenômenos socio-culturais que influenciam diretamente as nossas vidas - como recortes de (orientação de) género, raciais, políticos, económicos e de classe - providenciando um acompanhamento que não deixa de lado nenhuma das problemáticas que nos afetam no dia-a-dia. Além disso, nunca foram barreiras nem a nossa distância física (eu vivo na Bélgica), nem o meu sotaque (de Portugal). Por tudo isto e muito mais que não é possível expressar em poucas palavras, só posso recomendar vivamente o Matheus!"</p>
+                </div>
+
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Iniciais do paciente: E. C. B.</h3>
+                    <p class="review">"Estava passando por um momento difícil e delicado quando decidi procurar passar novamente por terapia. O Matheus entrou em contato comigo e fiquei extremamente aliviado por ele atender minha demanda quanto a gênero e sexualidade. Me sinto seguro de compartilhar com ele o que penso e sinto referente ao que eu passo durante o meu dia a dia, me sinto escutado, compreendido e acima de tudo respeitado. Um excelente profissional."</p>
+                </div>
+
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Iniciais do paciente: E. V.</h3>
+                    <p class="review">"Quando perdi meu irmão, pensei que ia ter muita dificuldade de achar um profissional que pudesse me acolher. O luto, e as emoções conflitantes que isso gera, é um assunto dificil de abordar, mas senti que Matheus estava bastante preparado. Me senti bem acolhido, e através de algumas sessões criamos um vinculo profundo. Ainda carrego a dor do luto comigo, mas sei que tenho um tempo e um espaço seguro para refletir e trazer introspecções."</p>
                 </div>
 
             </div>
